fixed create new microschema editor field flicker

--- a/src/app/admin/components/microschema-editor/microschema-editor.component.scss
+++ b/src/app/admin/components/microschema-editor/microschema-editor.component.scss
@@ -246,4 +246,8 @@
         padding-bottom: 0.5rem;
         text-align: right;
     }
+
+    .workaround-handle {
+        display: none;
+    }
 }
